src/test/ui/issues/issue-41726.nll.stderr
error[E0596]: cannot borrow data in a `&` reference as mutable
  --> $DIR/issue-41726.rs:5:9
   |
LL |         things[src.as_str()].sort();
   |         ^^^^^^^^^^^^^^^^^^^^ cannot borrow as mutable
   |
   = help: trait `IndexMut` is required to modify indexed content, but it is not implemented for `std::collections::HashMap<std::string::String, std::vec::Vec<std::string::String>>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
